boost_config.hpp was missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ set(config_install_dir "lib/cmake/${PROJECT_NAME}")
 
 set(PUBLIC_HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/autobahn/autobahn.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/autobahn/boost_config.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/autobahn/exceptions.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/autobahn/wamp_arguments.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/autobahn/wamp_auth_utils.hpp
